--- a/portfolio/src/assets/css/media.css
+++ b/portfolio/src/assets/css/media.css
@@ -30,3 +30,12 @@
     0% { height: 0px; }
     100% { height: 400px; }
 }
+
+/* btn animation */
+@keyframes btn-scale {
+    0%   {transform: scale(0);}
+    100% {transform: scale(1.01);}
+}
+.btn--hover:hover {
+    animation:btn-scale forwards;
+}
