--- a/portfolio/src/assets/css/nightMode.css
+++ b/portfolio/src/assets/css/nightMode.css
@@ -19,3 +19,10 @@ color: black;
     background-color: white;
     border-radius: 50%;
 }
+
+.bodyChange .border--img:before,
+.bodyChange .border--img:after
+{
+    content: "";
+    background-color: white!important;
+}
