--- a/portfolio/src/assets/css/nightMode.css
+++ b/portfolio/src/assets/css/nightMode.css
@@ -20,9 +20,85 @@ color: black;
     border-radius: 50%;
 }
 
+/* moncv.vue animation change night mode*/
 .bodyChange .border--img:before,
 .bodyChange .border--img:after
 {
     content: "";
     background-color: white!important;
 }
+
+.bodyChange ul:hover:before {
+    animation: border--before 1.5s linear forwards !important;
+}
+
+@keyframes border--before {
+    0%{
+        width: 0;
+        height: 0;
+        border-top-color: white;
+        border-right-color: transparent;
+        border-bottom-color: transparent;
+        border-left-color: transparent;
+    }
+    50% {
+        width:100%;
+        height: 0;
+        border-top-color:white;
+        border-right-color: white;
+        border-bottom-color: transparent;
+        border-left-color: transparent;
+    }
+    100% {
+        width:100%;
+        height: 100%;
+        border-top-color: white;
+        border-right-color: white;
+        border-bottom-color: transparent;
+        border-left-color: transparent;
+    }
+}
+
+ul:after{
+    content: '';
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    width: 0;
+    height: 0;
+    background: transparent;
+    border: 2px solid transparent;
+}
+
+.bodyChange ul:hover:after {
+    animation: border--after 1.5s linear forwards !important;
+}
+
+@keyframes border--after {
+    0%{
+        width: 0;
+        height: 0;
+        border-top-color: transparent;
+        border-right-color: transparent;
+        border-bottom-color: transparent;
+        border-left-color: white;
+    }
+    50% {
+        width:0;
+        height: 100%;
+        border-top-color:transparent;
+        border-right-color: transparent;
+        border-bottom-color: white;
+        border-left-color: white;
+    }
+    100% {
+        width:100%;
+        height: 100%;
+        border-top-color: transparent;
+        border-right-color: transparent;
+        border-bottom-color: white;
+        border-left-color: white;
+    }
+}
+/* --------------- */
+
