--- a/portfolio/src/assets/css/nightMode.css
+++ b/portfolio/src/assets/css/nightMode.css
@@ -32,7 +32,7 @@ color: black;
     background-color: white!important;
 }
 
-.bodyChange ul:hover:before {
+.bodyChange ul.moncv--night:hover:before {
     animation: border--before 1.5s linear forwards !important;
 }
 
@@ -63,18 +63,7 @@ color: black;
     }
 }
 
-ul:after{
-    content: '';
-    position: absolute;
-    top: -2px;
-    left:-2px;
-    width: 0;
-    height: 0;
-    background: transparent;
-    border: 2px solid transparent;
-}
-
-.bodyChange ul:hover:after {
+.bodyChange ul.moncv--night:hover:after {
     animation: border--after 1.5s linear forwards !important;
 }
 
@@ -133,10 +122,11 @@ ul:after{
 
 .bodyChange .home--night span:first-child {
     color:white;
-}
+} 
 
 .bodyChange .home--night ul:before,
 .bodyChange .home--night ul:after {
+    content: "";
     background-color: white;
 }
 
