again change css

--- a/portfolio/src/assets/css/nightMode.css
+++ b/portfolio/src/assets/css/nightMode.css
@@ -148,6 +148,9 @@ color: black;
 /* ------------------ */
 
 /* contactView */
+.bodyChange .--contact span {
+    color: white;
+}
 
 .bodyChange .btn--night input {
     color: white;
