--- a/portfolio/src/assets/css/nightMode.css
+++ b/portfolio/src/assets/css/nightMode.css
@@ -128,6 +128,9 @@ color: black;
 .bodyChange .card--night div>p {
     color: grey;
 }
+.bodyChange .card--shadow:hover {
+    box-shadow: 5px 5px 15px 5px rgba(255, 255, 255, 0.5);
+}
 
 /* ----------------- */
 
