change ccs and add scroll up methode

--- a/portfolio/src/assets/css/nightMode.css
+++ b/portfolio/src/assets/css/nightMode.css
@@ -187,3 +187,10 @@ color: black;
 }
 /* ---------- */
 
+/* app.vue */
+.bodyChange .scrollUp {
+    background-color: black;
+    color: white;
+    border-color: white;
+}
+/* --------- */
