--- a/portfolio/src/assets/css/nightMode.css
+++ b/portfolio/src/assets/css/nightMode.css
@@ -6,12 +6,11 @@
 background-color: #202124;
 }
 .bodyChange nav {
-background-color: white;
+background-color: white!important;
 transition:all 0.5s;
-
 }
 .bodyChange a {
-color: black;
+color: black!important;
 }
 .bodyChange p, 
 .bodyChange h2, 
