--- a/portfolio/src/assets/css/nightMode.css
+++ b/portfolio/src/assets/css/nightMode.css
@@ -6,11 +6,12 @@
 background-color: #202124;
 }
 .bodyChange nav {
-background-color: white!important;
+background-color: white;
 transition:all 0.5s;
+
 }
 .bodyChange a {
-color: black!important;
+color: black;
 }
 .bodyChange p, 
 .bodyChange h2, 
