--- a/portfolio/src/assets/css/nightMode.css
+++ b/portfolio/src/assets/css/nightMode.css
@@ -26,8 +26,8 @@ color: black;
 }
 
 /* moncv.vue animation change night mode*/
-div.container--list:after {
-    border-right: 2px dashed white!important;
+.bodyChange div.container--list:after {
+    border-color: white!important;
 }
 .bodyChange h3.reference--title {
     color: white;
@@ -43,7 +43,7 @@ div.container--list:after {
     background-color: transparent!important;
     border-radius:16px;
 }
-.bodyChange .--contact {
+.bodyChange .li--contact {
     color: black!important;
     background-color: white;
 }
